--- a/ic-agent/Cargo.toml
+++ b/ic-agent/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "ic-agent"
-version.workspace = true
+name = "ex3-ic-agent"
+version = "0.24.1"
 authors.workspace = true
 edition.workspace = true
 repository.workspace = true
@@ -48,7 +48,7 @@ features = ["client", "http2", "http1"]
 optional = true
 
 [dependencies.reqwest]
-version = "0.11.18"
+version = "= 0.11.18"
 default-features = false
 features = ["blocking", "json", "rustls-tls", "stream"]
 optional = true
@@ -58,12 +58,12 @@ version = "2.0.1"
 optional = true
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-hyper-rustls = { version = "0.24.0", features = [
+hyper-rustls = { version = "=0.24.0", features = [
     "webpki-roots",
     "http2",
 ], optional = true }
 tokio = { version = "1.24.2", features = ["time"] }
-rustls = "0.21.1"
+rustls = "=0.21.1"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 getrandom = { version = "0.2", features = ["js"], optional = true }
